--- a/doc/man/de/linkchecker.1
+++ b/doc/man/de/linkchecker.1
@@ -415,7 +415,7 @@ Mail\-Links (\fBmailto:\fP)
 Ein \fI\%mailto:\-Link\fP ergibt eine Liste von E\-Mail\-Adressen. Falls eine Adresse fehlerhaft ist, wird die ganze Liste als fehlerhaft angesehen. Für jede E\-Mail\-Adresse werden die folgenden Dinge geprüft:
 .INDENT 7.0
 .IP 1. 3
-Check the adress syntax, both of the part before and after the
+Check the address syntax, both the parts before and after the
 @ sign.
 .IP 2. 3
 Look up the MX DNS records. If we found no MX record, print an
