--- a/doc/man/en/linkchecker.1
+++ b/doc/man/en/linkchecker.1
@@ -506,7 +506,7 @@ If one address fails, the whole list will fail. For each mail
 address we check the following things:
 .INDENT 7.0
 .IP 1. 3
-Check the adress syntax, both of the part before and after the
+Check the address syntax, both the parts before and after the
 @ sign.
 .IP 2. 3
 Look up the MX DNS records. If we found no MX record, print an
