--- a/doc/man/en/linkcheckerrc.5
+++ b/doc/man/en/linkcheckerrc.5
@@ -186,10 +186,10 @@ for specifying all available loggers.
 Command line option: \fB\-\-debug\fP
 .TP
 \fBfileoutput=\fP\fITYPE\fP[\fB,\fP\fITYPE\fP\&...]
-Output to a files \fBlinkchecker\-out.\fP\fITYPE\fP,
+Output to a file \fBlinkchecker\-out.\fP\fITYPE\fP, or
 \fB$HOME/.linkchecker/blacklist\fP for \fBblacklist\fP output.
 Valid file output types are \fBtext\fP, \fBhtml\fP, \fBsql\fP, \fBcsv\fP,
-\fBgml\fP, \fBdot\fP, \fBxml\fP, \fBnone\fP or \fBblacklist\fP Default is no
+\fBgml\fP, \fBdot\fP, \fBxml\fP, \fBnone\fP or \fBblacklist\fP\&. Default is no
 file output. The various output types are documented below. Note
 that you can suppress all console output with \fBoutput=none\fP\&.
 Command line option: \fB\-\-file\-output\fP
