--- a/doc/man/en/linkchecker.1
+++ b/doc/man/en/linkchecker.1
@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH "LINKCHECKER" "1" "August 06, 2020" "" "LinkChecker"
+.TH "LINKCHECKER" "1" "August 08, 2020" "" "LinkChecker"
 .SH NAME
 linkchecker \- command line client to check HTML documents and websites for broken links
 .
@@ -294,6 +294,11 @@ Check but do not recurse into URLs matching the given regular
 expression.
 This option can be given multiple times.
 See section \fI\%REGULAR EXPRESSIONS\fP for more info.
+.UNINDENT
+.INDENT 0.0
+.TP
+.B \-\-no\-robots
+Check URLs regardless of any robots.txt files.
 .UNINDENT
 .INDENT 0.0
 .TP
