--- a/doc/man/de/linkchecker.1
+++ b/doc/man/de/linkchecker.1
@@ -1,8 +1,8 @@
 .\" Man page generated from reStructuredText.
 .
-.TH "LINKCHECKER" "1" "August 09, 2020" "" "LinkChecker"
+.TH "LINKCHECKER" "1" "August 11, 2020" "" "LinkChecker"
 .SH NAME
-linkchecker \- command line client to check HTML documents and websites for broken links
+linkchecker \- Kommandozeilenprogramm zum Prüfen von HTML Dokumenten und Webseiten auf ungültige Verknüpfungen
 .
 .nr rst2man-indent-level 0
 .
