--- a/doc/man/de/linkcheckerrc.5
+++ b/doc/man/de/linkcheckerrc.5
@@ -1,8 +1,8 @@
 .\" Man page generated from reStructuredText.
 .
-.TH "LINKCHECKERRC" "5" "August 09, 2020" "" "LinkChecker"
+.TH "LINKCHECKERRC" "5" "August 11, 2020" "" "LinkChecker"
 .SH NAME
-linkcheckerrc \- configuration file for LinkChecker
+linkcheckerrc \- Konfigurationsdatei für LinkChecker
 .
 .nr rst2man-indent-level 0
 .
