--- a/doc/i18n/gettext/man.pot
+++ b/doc/i18n/gettext/man.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: LinkChecker \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-08-09 16:29+0100\n"
+"POT-Creation-Date: 2020-08-22 16:37+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -162,7 +162,7 @@ msgid "Print debugging output for the given logger. Available loggers are cmdlin
 msgstr ""
 
 #: ../../src/man/linkchecker.rst:127
-msgid "Output to a file linkchecker-out.TYPE, $HOME/.linkchecker/blacklist for blacklist output, or FILENAME if specified. The ENCODING specifies the output encoding, the default is that of your locale. Valid encodings are listed at https://docs.python.org/library/codecs.html#standard-encodings. The FILENAME and ENCODING parts of the none output type will be ignored, else if the file already exists, it will be overwritten. You can specify this option more than once. Valid file output TYPEs are text, html, sql, csv, gml, dot, xml, sitemap, none or blacklist. Default is no file output. The various output types are documented below. Note that you can suppress all console output with the option :option:`-o` *none*."
+msgid "Output to a file linkchecker-out.TYPE, $HOME/.linkchecker/failures for failures output, or FILENAME if specified. The ENCODING specifies the output encoding, the default is that of your locale. Valid encodings are listed at https://docs.python.org/library/codecs.html#standard-encodings. The FILENAME and ENCODING parts of the none output type will be ignored, else if the file already exists, it will be overwritten. You can specify this option more than once. Valid file output TYPEs are text, html, sql, csv, gml, dot, xml, sitemap, none or failures. Default is no file output. The various output types are documented below. Note that you can suppress all console output with the option :option:`-o` *none*."
 msgstr ""
 
 #: ../../src/man/linkchecker.rst:143
@@ -174,7 +174,7 @@ msgid "Don't log warnings. Default is to log warnings."
 msgstr ""
 
 #: ../../src/man/linkchecker.rst:151
-msgid "Specify output type as text, html, sql, csv, gml, dot, xml, sitemap, none or blacklist. Default type is text. The various output types are documented below. The ENCODING specifies the output encoding, the default is that of your locale. Valid encodings are listed at https://docs.python.org/library/codecs.html#standard-encodings."
+msgid "Specify output type as text, html, sql, csv, gml, dot, xml, sitemap, none or failures. Default type is text. The various output types are documented below. The ENCODING specifies the output encoding, the default is that of your locale. Valid encodings are listed at https://docs.python.org/library/codecs.html#standard-encodings."
 msgstr ""
 
 #: ../../src/man/linkchecker.rst:161
@@ -326,11 +326,11 @@ msgid "Log check result as SQL script with INSERT commands. An example script to
 msgstr ""
 
 #: ../../src/man/linkchecker.rst:282
-msgid "**blacklist**"
+msgid "**failures**"
 msgstr ""
 
 #: ../../src/man/linkchecker.rst:281
-msgid "Suitable for cron jobs. Logs the check result into a file **~/.linkchecker/blacklist** which only contains entries with invalid URLs and the number of times they have failed."
+msgid "Suitable for cron jobs. Logs the check result into a file **~/.linkchecker/failures** which only contains entries with invalid URLs and the number of times they have failed."
 msgstr ""
 
 #: ../../src/man/linkchecker.rst:285
@@ -651,7 +651,7 @@ msgid "**~/.linkchecker/linkcheckerrc** - default configuration file"
 msgstr ""
 
 #: ../../src/man/linkchecker.rst:526
-msgid "**~/.linkchecker/blacklist** - default blacklist logger output filename"
+msgid "**~/.linkchecker/failures** - default failures logger output filename"
 msgstr ""
 
 #: ../../src/man/linkchecker.rst:528
@@ -932,7 +932,7 @@ msgid "**fileoutput=**\\ *TYPE*\\ [**,**\\ *TYPE*...]"
 msgstr ""
 
 #: ../../src/man/linkcheckerrc.rst:167
-msgid "Output to a file **linkchecker-out.**\\ *TYPE*, or **$HOME/.linkchecker/blacklist** for **blacklist** output. Valid file output types are **text**, **html**, **sql**, **csv**, **gml**, **dot**, **xml**, **none** or **blacklist**. Default is no file output. The various output types are documented below. Note that you can suppress all console output with **output=none**. Command line option: :option:`--file-output`"
+msgid "Output to a file **linkchecker-out.**\\ *TYPE*, or **$HOME/.linkchecker/failures** for **failures** output. Valid file output types are **text**, **html**, **sql**, **csv**, **gml**, **dot**, **xml**, **none** or **failures**. Default is no file output. The various output types are documented below. Note that you can suppress all console output with **output=none**. Command line option: :option:`--file-output`"
 msgstr ""
 
 #: ../../src/man/linkcheckerrc.rst:180
@@ -940,7 +940,7 @@ msgid "**log=**\\ *TYPE*\\ [**/**\\ *ENCODING*]"
 msgstr ""
 
 #: ../../src/man/linkcheckerrc.rst:175
-msgid "Specify output type as **text**, **html**, **sql**, **csv**, **gml**, **dot**, **xml**, **none** or **blacklist**. Default type is **text**. The various output types are documented below. The *ENCODING* specifies the output encoding, the default is that of your locale. Valid encodings are listed at https://docs.python.org/library/codecs.html#standard-encodings. Command line option: :option:`--output`"
+msgid "Specify output type as **text**, **html**, **sql**, **csv**, **gml**, **dot**, **xml**, **none** or **failures**. Default type is **text**. The various output types are documented below. The *ENCODING* specifies the output encoding, the default is that of your locale. Valid encodings are listed at https://docs.python.org/library/codecs.html#standard-encodings. Command line option: :option:`--output`"
 msgstr ""
 
 #: ../../src/man/linkcheckerrc.rst:184
@@ -1260,7 +1260,7 @@ msgid "Set HTML valid color. Default is **#3ba557**."
 msgstr ""
 
 #: ../../src/man/linkcheckerrc.rst:316
-msgid "blacklist"
+msgid "failures"
 msgstr ""
 
 #: ../../src/man/linkcheckerrc.rst:324
