--- a/doc/man/en/linkcheckerrc.5
+++ b/doc/man/en/linkcheckerrc.5
@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH "LINKCHECKERRC" "5" "August 11, 2020" "" "LinkChecker"
+.TH "LINKCHECKERRC" "5" "August 22, 2020" "" "LinkChecker"
 .SH NAME
 linkcheckerrc \- configuration file for LinkChecker
 .
@@ -213,16 +213,16 @@ Command line option: \fB\-\-debug\fP
 .TP
 \fBfileoutput=\fP\fITYPE\fP[\fB,\fP\fITYPE\fP\&...]
 Output to a file \fBlinkchecker\-out.\fP\fITYPE\fP, or
-\fB$HOME/.linkchecker/blacklist\fP for \fBblacklist\fP output.
+\fB$HOME/.linkchecker/failures\fP for \fBfailures\fP output.
 Valid file output types are \fBtext\fP, \fBhtml\fP, \fBsql\fP, \fBcsv\fP,
-\fBgml\fP, \fBdot\fP, \fBxml\fP, \fBnone\fP or \fBblacklist\fP\&. Default is no
+\fBgml\fP, \fBdot\fP, \fBxml\fP, \fBnone\fP or \fBfailures\fP\&. Default is no
 file output. The various output types are documented below. Note
 that you can suppress all console output with \fBoutput=none\fP\&.
 Command line option: \fB\-\-file\-output\fP
 .TP
 \fBlog=\fP\fITYPE\fP[\fB/\fP\fIENCODING\fP]
 Specify output type as \fBtext\fP, \fBhtml\fP, \fBsql\fP, \fBcsv\fP,
-\fBgml\fP, \fBdot\fP, \fBxml\fP, \fBnone\fP or \fBblacklist\fP\&. Default type
+\fBgml\fP, \fBdot\fP, \fBxml\fP, \fBnone\fP or \fBfailures\fP\&. Default type
 is \fBtext\fP\&. The various output types are documented below.
 The \fIENCODING\fP specifies the output encoding, the default is that of
 your locale. Valid encodings are listed at
@@ -400,7 +400,7 @@ Set HTML error color. Default is \fB#db4930\fP\&.
 \fBcolorok=\fP
 Set HTML valid color. Default is \fB#3ba557\fP\&.
 .UNINDENT
-.SS blacklist
+.SS failures
 .INDENT 0.0
 .TP
 \fBfilename=\fP\fISTRING\fP
