--- a/doc/man/de/linkcheckerrc.5
+++ b/doc/man/de/linkcheckerrc.5
@@ -127,7 +127,7 @@ Command line option: \fB\-\-check\-extern\fP
 .SS authentication
 .INDENT 0.0
 .TP
-\fBentry=\fP\fIREGEX\fP \fIBENUTZER\fP [\fIPASSWORT\fP] (MULTILINE)
+\fBentry=\fP\fIREGEX\fP \fIBENUTZER\fP [\fIPASSWORT\fP] (\fI\%MULTILINE\fP)
 Provide individual username/password pairs for different links. In
 addtion to a single login page specified with \fBloginurl\fP multiple
 FTP, HTTP (Basic Authentication) and telnet links are supported.
@@ -155,7 +155,7 @@ Der Name für das Benutzer CGI\-Feld. Der Standardname ist \fBlogin\fP\&.
 \fBloginpasswordfield=\fP\fISTRING\fP
 Der Name für das Passwort CGI\-Feld. Der Standardname ist \fBpassword\fP\&.
 .TP
-\fBloginextrafields=\fP\fINAME\fP\fB:\fP\fIWERT\fP (MULTILINE)
+\fBloginextrafields=\fP\fINAME\fP\fB:\fP\fIWERT\fP (\fI\%MULTILINE\fP)
 Optionally the name attributes of any additional input elements and
 the values to populate them with. Note that these are submitted
 without checking whether matching input elements exist in the HTML
